--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TechStore"
-        tools:targetApi="31" />
+        tools:targetApi="31" >
+    <activity
+        android:name=".features.product_list.activities.ProductListActivity"
+        android:exported="true">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
 
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+    </activity>
+        <activity
+            android:name=".features.product_details.activities.ProductDetailsActivity"
+            android:exported="true"/>
+    </application>
 </manifest>
