vaodyssey: refactored Product List, and added Bottom Navigation Bar

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    buildFeatures{
+        viewBinding true
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -32,6 +35,7 @@ android {
 dependencies {
     implementation libs.appcompat
     implementation libs.material
+    implementation 'com.google.android.material:material:1.2.0'
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.32'
     annotationProcessor 'org.projectlombok:lombok:1.18.32'
     testImplementation libs.junit
