--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.TechStore"
         tools:targetApi="31" >
     <activity
-        android:name=".features.product_list.activities.ProductListActivity"
+        android:name=".features.main.activities.MainActivity"
         android:exported="true">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
