--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     implementation 'com.github.travijuu:numberpicker:1.0.7'
     implementation 'com.ms-square:expandableTextView:0.1.4'
     implementation 'com.github.amarjain07:StickyScrollView:1.0.3'
+    implementation libs.activity
+    implementation libs.constraintlayout
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.32'
     annotationProcessor 'org.projectlombok:lombok:1.18.32'
     testImplementation libs.junit
