--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,59 +1,60 @@
 plugins {
-    alias(libs.plugins.android.application)
+	alias(libs.plugins.android.application)
 }
 
 
 android {
-    namespace 'com.prm391.techstore'
-    compileSdk 34
-    buildFeatures {
-        buildConfig = true
-    }
-    defaultConfig {
-        applicationId "com.prm391.techstore"
-        minSdk 26
-        targetSdk 34
-        versionCode 1
-        versionName "1.0"
-        buildConfigField "String", "TECHSTORE_URL", "\"${System.getenv("TECHSTORE_URL") ?: "https://default.example.com"}\""
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
+	namespace 'com.prm391.techstore'
+	compileSdk 34
+	buildFeatures {
+		buildConfig = true
+	}
+	defaultConfig {
+		applicationId "com.prm391.techstore"
+		minSdk 26
+		targetSdk 34
+		versionCode 1
+		versionName "1.0"
+		buildConfigField "String", "TECHSTORE_URL", "\"${System.getenv("TECHSTORE_URL") ?: "https://default.example.com"}\""
+		testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+	}
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-    buildFeatures{
-        viewBinding true
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
+	buildTypes {
+		release {
+			minifyEnabled false
+			proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+		}
+	}
+	buildFeatures{
+		viewBinding true
+	}
+	compileOptions {
+		sourceCompatibility JavaVersion.VERSION_1_8
+		targetCompatibility JavaVersion.VERSION_1_8
+	}
 }
 
 dependencies {
-    implementation libs.appcompat
-    implementation libs.material
-    implementation 'com.google.android.flexbox:flexbox:3.0.0'
-    implementation 'com.google.android.material:material:1.2.0'
-    implementation 'com.github.travijuu:numberpicker:1.0.7'
-    implementation 'com.ms-square:expandableTextView:0.1.4'
-    implementation 'com.github.amarjain07:StickyScrollView:1.0.3'
-    implementation libs.activity
-    implementation libs.constraintlayout
-    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
-    implementation 'com.google.code.gson:gson:2.6.2'
-    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
-    implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.12.0'
-    implementation group: 'com.squareup.okhttp3', name: 'logging-interceptor', version: '4.12.0'
-    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.32'
-    annotationProcessor 'org.projectlombok:lombok:1.18.32'
-    testImplementation libs.junit
-    androidTestImplementation libs.ext.junit
-    androidTestImplementation libs.espresso.core
+	implementation libs.appcompat
+	implementation libs.material
+	implementation 'com.google.android.flexbox:flexbox:3.0.0'
+	implementation 'com.google.android.material:material:1.2.0'
+	implementation 'com.github.travijuu:numberpicker:1.0.7'
+	implementation 'com.ms-square:expandableTextView:0.1.4'
+	implementation 'com.github.amarjain07:StickyScrollView:1.0.3'
+	implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01"
+	implementation libs.activity
+	implementation libs.constraintlayout
+	implementation 'com.squareup.retrofit2:retrofit:2.1.0'
+	implementation 'com.google.code.gson:gson:2.6.2'
+	implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+	implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.12.0'
+	implementation group: 'com.squareup.okhttp3', name: 'logging-interceptor', version: '4.12.0'
+	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.32'
+	annotationProcessor 'org.projectlombok:lombok:1.18.32'
+	testImplementation libs.junit
+	androidTestImplementation libs.ext.junit
+	androidTestImplementation libs.espresso.core
 }
 
 
