--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,21 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
 alias(libs.plugins.android.application) apply false
+    id 'com.diffplug.spotless' version '6.19.0' apply false
+}
+
+subprojects {
+    apply plugin: 'com.diffplug.spotless'
+    spotless {
+        kotlin {
+            target '**/*.kt'
+            targetExclude("$buildDir/**/*.kt")
+            ktlint()
+        }
+
+        groovyGradle {
+            target '*.gradle'
+            greclipse()
+        }
+    }
 }
