--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,8 @@ dependencies {
 	implementation 'com.ms-square:expandableTextView:0.1.4'
 	implementation 'com.github.amarjain07:StickyScrollView:1.0.3'
 	implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01"
+	implementation 'com.android.support:appcompat-v7:26.1.0'
+	implementation 'com.android.support:design:26.1.0'
 	implementation libs.activity
 	implementation libs.constraintlayout
 	implementation 'com.squareup.retrofit2:retrofit:2.1.0'
