--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
 	alias(libs.plugins.android.application)
+	alias(libs.plugins.google.android.libraries.mapsplatform.secrets.gradle.plugin)
 }
 
 
@@ -52,6 +53,7 @@ dependencies {
 	implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
 	implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.12.0'
 	implementation group: 'com.squareup.okhttp3', name: 'logging-interceptor', version: '4.12.0'
+	implementation libs.play.services.maps
 	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.32'
 	annotationProcessor 'org.projectlombok:lombok:1.18.32'
 	testImplementation libs.junit
