--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ android {
 dependencies {
 	implementation libs.appcompat
 	implementation libs.material
+	implementation 'androidx.lifecycle:lifecycle-process'
 	implementation 'com.google.android.flexbox:flexbox:3.0.0'
 	implementation 'com.google.android.material:material:1.2.0'
 	implementation 'com.github.travijuu:numberpicker:1.0.7'
