--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-alias(libs.plugins.android.application) apply false
-    id 'com.diffplug.spotless' version '6.19.0' apply false
-    alias(libs.plugins.google.android.libraries.mapsplatform.secrets.gradle.plugin) apply false
-}
 
+plugins {
+    alias(libs.plugins.android.application) apply false
+    alias(libs.plugins.google.android.libraries.mapsplatform.secrets.gradle.plugin) apply false
+    id "com.diffplug.gradle.spotless" version "6.5.2" apply false
+}
 subprojects {
     apply plugin: 'com.diffplug.spotless'
     spotless {
-        kotlin {
-            target '**/*.kt'
-            targetExclude("$buildDir/**/*.kt")
-            ktlint()
-        }
         java {
             importOrder()
             removeUnusedImports()
             googleJavaFormat().aosp().reflowLongStrings()
-            formatAnnotations()
         }
         groovyGradle {
             target '*.gradle'
@@ -25,3 +19,5 @@ subprojects {
         }
     }
 }
+
+
