--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
 	implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.12.0'
 	implementation group: 'com.squareup.okhttp3', name: 'logging-interceptor', version: '4.12.0'
 	implementation libs.play.services.maps
+	implementation 'com.google.android.gms:play-services-maps:19.0.0'
 	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.32'
 	annotationProcessor 'org.projectlombok:lombok:1.18.32'
 	testImplementation libs.junit
