--- a/settings.gradle
+++ b/settings.gradle
@@ -18,6 +18,9 @@ dependencyResolutionManagement {
         google()
         mavenCentral()
         maven { url 'https://jitpack.io' }
+        flatDir {
+            dirs "libs"
+        }
     }
 }
 
